syntax = "proto3";
package prototestmsgs;
option go_package = "github.com/dfklegend/cell2/utils/serialize/proto/msgs";

// 用于测试
message ServiceRequest {
  string Sender = 1;   //
  int32 ReqId = 2;        // 请求id
  string Type = 3;        // 数据类型
  bytes Body = 4;         // 序列化数据
}

message ServiceRequest1 {
  string Sender = 1;   //
  string Type = 2;        // 数据类型
  int32 ReqId = 3;        // 请求id
  bytes Body = 4;         // 序列化数据
}

message ServiceRequest2 {
  int32 ReqId = 1;        // 请求id
  string Sender = 2;   //
  string Type = 3;        // 数据类型
  bytes Body = 4;         // 序列化数据
}

message ServiceResponse {
  int32 ReqId = 1;
  string Type = 2;        // 数据类型
  bytes Body = 3;         // 序列化数据
  int32 ErrCode = 4;      // 0 - succ
  string ErrInfo = 5;     // 错误信息
}

// 用于单元测试
message TestHello {
  int32 I = 1;
  string S = 2;
}
